@@ -6,6 +6,8 @@ version 1.23:
 	- pommed: default to sysfs backlight driver for nVidia machines,
 	with the mbp_nvidia_bl kernel driver; fall back to native
 	nv8600mgt if not supported.
+	- pommed: try to reconnect to DBus if DBus is not available at
+	startup. Previously we would just drop it and live without DBus.
 
 version 1.22:
 	- pommed: do not probe for LMU controller on pmac machines that do
